@@ -31,7 +31,6 @@ export(AsyncListEnv)
 export(AsyncTask)
 export(AsyncTaskError)
 export(BatchJobsAsyncTask)
-export(async)
 export(asyncBatchEvalQ)
 export(asyncEvalQ)
 export(availableCores)
