@@ -1,35 +1,0 @@
-#' Explicit asynchroneous evaluation
-#'
-#' \code{async()} evaluates an expression asynchroneous.
-#'
-#' @param expr An R expression to be evaluated
-#' @param envir The environment from which global environment
-#'              are search from.
-#' @param substitute Controls whether \code{expr} should be
-#'                   \code{substitute()}:d or not.
-#' @param ... Optional arguments.
-#'
-#' @return \code{async()} returns an AsyncTask object.
-#'
-#' @rdname async
-#' @export
-async <- function(expr, envir=parent.frame(), substitute=TRUE, ...) {
-  if (substitute) expr <- substitute(expr)
-  BatchJobsAsyncTask(expr=expr, envir=envir, substitute=FALSE, ...)
-}
-
-#' Awaits an asynchroneous evaluation
-#'
-#' @param task An \code{AsyncTask} object whose value to retrieve.
-#' @param ... Not used.
-#'
-#' @return \code{await()} returns the value of the expression.
-#'
-#' @details
-#' Note that \code{await()} should only be called once, because
-#' after being called the actual asynchroneous task is removed
-#' and no longer available for subsequent calls.  If called
-#' again, an error is thrown.
-#'
-#' @export
-await <- function(task, ...) UseMethod("await")
