@@ -2,6 +2,7 @@ Package: async
 ==============
 
 Version: 0.4.1-9000 [2015-06-14]
+o CLEANUP: Dropped async() - now batchjobs().
 o CLEANUP: Dropped makeClusterFunctionsRscript().
 o CLEANUP: Dropped delayed assignment %<-% infix operator.
 
